Fixed audio overlap bug at high BPMs and removed scrollbar

--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -30,12 +30,18 @@ body,
 #root {
     height: 100vh;
     overflow-x: hidden;
+    scrollbar-width: none; /* Firefox */
 }
 
 #root {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+#root::-webkit-scrollbar {
+    width: none;
+    height: none;
 }
 
 body {
